[project]
name = "listiki"
version = "0.1.0"
description = ""
authors = [
    {name = "mrVershinin",email = "hello@mrvershinin.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standart] (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "aiogram (>=3.20.0.post0,<4.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]

[tool.poetry]
package-mode = false
